[project]
name = "bond-portfolio-api"
version = "0.1.0"
description = "Backend service for bond portfolio management and analysis"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.2",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
